syntax = "proto3";

package org.hse.nnbuilder.services;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service UserService {
  rpc getUserById (GetUserByIdRequest) returns (User);
}

message GetUserByIdRequest {
  int64 id = 1;
}

message User {
  int64 id = 1;
  string name = 2;
}
